// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly default unit is inches 1`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
    >
      Spacing
      <span
        className="value"
      >
        3.937"
      </span>
    </p>
    <label
      className="accordion-body"
    >
      <div>
        <div
          className="control nest-spacing"
        >
          <UnitInput
            abbr={false}
            className={Object {}}
            defaultValue={100}
            disabled={false}
            displayMultiValue={false}
            forceUsePropsUnit={false}
            getValue={[Function]}
            isDoOnInput={false}
            max={9007199254740991}
            min={0}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            step={1}
            type="text"
            unit="mm"
          />
        </div>
      </div>
    </label>
  </label>
</div>
`;

exports[`should render correctly default unit is inches 2`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
    >
      Spacing
      <span
        className="value"
      >
        1.969"
      </span>
    </p>
    <label
      className="accordion-body"
    >
      <div>
        <div
          className="control nest-spacing"
        >
          <UnitInput
            abbr={false}
            className={Object {}}
            defaultValue={50}
            disabled={false}
            displayMultiValue={false}
            forceUsePropsUnit={false}
            getValue={[Function]}
            isDoOnInput={false}
            max={9007199254740991}
            min={0}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            step={1}
            type="text"
            unit="mm"
          />
        </div>
      </div>
    </label>
  </label>
</div>
`;

exports[`should render correctly default unit is mm 1`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
    >
      Spacing
      <span
        className="value"
      >
        100 mm
      </span>
    </p>
    <label
      className="accordion-body"
    >
      <div>
        <div
          className="control nest-spacing"
        >
          <UnitInput
            abbr={false}
            className={Object {}}
            defaultValue={100}
            disabled={false}
            displayMultiValue={false}
            forceUsePropsUnit={false}
            getValue={[Function]}
            isDoOnInput={false}
            max={9007199254740991}
            min={0}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            step={1}
            type="text"
            unit="mm"
          />
        </div>
      </div>
    </label>
  </label>
</div>
`;
